tests/v0_4/invalid/step_primitive_collision.devops
target "local" {
  address = "localhost"
}

// Step name collides with primitive type (forbidden)
step "file.sync" {
  src  = "./build"
  dest = "/var/www"
}

node "deploy" {
  type = file.sync
  targets = [local]
}
